// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TDD Ops Vacancy card renders certification vacancy correctly 1`] = `
<div
  className="ops-vacancy-card"
>
  <div
    className="ops-vacancy-card__role-name"
  >
    Wava Wehner MD
  </div>
  <div
    className="ops-vacancy-card__project-slots"
  >
    2
     
    available slots
  </div>
  <div
    className="ops-vacancy-card__project"
  >
    20 weeks
  </div>
  <div
    className="ops-vacancy-card__applications"
  >
    0
     
    applications
  </div>
</div>
`;

exports[`TDD Ops Vacancy card renders project vacancy correctly 1`] = `
<div
  className="ops-vacancy-card"
>
  <div
    className="ops-vacancy-card__icon"
    data-toggle="dropdown"
  >
    <div
      className="d-flex pr-3 align-items-center"
    >
      <img
        alt=""
        src="More.svg"
      />
    </div>
  </div>
  <div
    className="dropdown-menu dropdown-menu-right"
  >
    <button
      className="dropdown-item"
      data-target="#addProjectVacanciesModal"
      data-toggle="modal"
      onClick={[Function]}
      type="button"
    >
      Edit
    </button>
    <button
      className="dropdown-item"
      data-target="#deleteProjectVacanciesModal"
      data-toggle="modal"
      onClick={[Function]}
      type="button"
    >
      Delete
    </button>
  </div>
  <div
    className="ops-vacancy-card__role-name"
  >
    Engineer
  </div>
  <div
    className="ops-vacancy-card__project-slots"
  >
    5
     
    available slots
  </div>
  <div
    className="ops-vacancy-card__project"
  >
    Corrupti non.
  </div>
  <div
    className="ops-vacancy-card__applications"
  >
    0
     
    applications
  </div>
</div>
`;
